--- a/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
+++ b/AppBolivar/Src/Consulta Medica Atencion.fx.yaml
@@ -9152,8 +9152,9 @@
                                 )
                             );
                             
-                            If(LookUp('public.Medical_Center_Ticket', id = TicketSelected.id_Ticket).caja_finalizada = false,
-                              Navigate(Caja),Navigate('Consulta Medica Dashboard'));
+                            
+                            
+                            
                             
                             UpdateContext({_varRECETAR:false});
                             
@@ -10157,8 +10158,18 @@
                             
                             LookUp('public.Medical_Center_Historial_Principal',DNI_CI=TicketSelected.DNI_Paciente,Nombres)&" " &LookUp('public.Medical_Center_Historial_Principal',DNI_CI=TicketSelected.DNI_Paciente,Apellidos)));
                             
+                            //NAVIGATE
+                            If(
+                                LookUp(
+                                    'public.Medical_Center_Historial_Principal',
+                                    DNI_CI = TicketSelected.DNI_Paciente,
+                                    DNI_CI
+                                ) = TicketSelected.DNI_Paciente,
+                              If(getUser.Rol= "Administrador" And  LookUp('public.Medical_Center_Ticket', id =  TicketSelected.id_Ticket).caja_finalizada = false ,  Navigate(Caja) & Refresh('public.Medical_Center_Counter'),Navigate('Consulta Medica Dashboard'));
+                              ""
+                            );
+                            
                             Clear(colDescansoMedico);
-                            //Clear(colLaboratorioReceta)
                             Reset(CheckboxRecetaMedica);Reset(CheckboxDescansoMedico);Reset(CheckboxExamenesSolicitados);Set(SolicitarExamenSelected,Blank())
                         RadiusBottomLeft: =8
                         RadiusBottomRight: =8
