--- a/AppBolivar/CanvasManifest.json
+++ b/AppBolivar/CanvasManifest.json
@@ -132,7 +132,7 @@
     "PublishDataLocally": false,
     "PublishResourcesLocally": false,
     "PublishTarget": "player",
-    "UserLocale": "es-ES"
+    "UserLocale": "en-US"
   },
   "ScreenOrder": [
     "Home",
@@ -163,6 +163,7 @@
     "Sin Acceso",
     "Onboarding",
     "Test_Maestro",
-    "Screen2"
+    "Screen2",
+    "scHistoriaMedicaNutricion"
   ]
 }
