--- a/AppBolivar/Src/Administracion UsuarioV2.fx.yaml
+++ b/AppBolivar/Src/Administracion UsuarioV2.fx.yaml
@@ -2296,7 +2296,7 @@
                 ContainerAddUsers As groupContainer.manualLayoutContainer:
                     BorderThickness: =2
                     Fill: =RGBA(255, 255, 255, 1)
-                    Height: =800
+                    Height: =850
                     RadiusBottomLeft: =8
                     RadiusBottomRight: =8
                     RadiusTopLeft: =8
@@ -2470,9 +2470,11 @@
                         HoverFill: =If(Or(getUser.Modo_Nocturno=false ,IsBlank(getUser.Modo_Nocturno)),varcolor_ClaroElementoPrimario,varcolor_OscuroElementoPrimario)
                         OnSelect: |-
                             =UpdateContext({_varNewUsuario:false});
+                            Set(_varUSedes, ComboBox4_SedesU.Selected);
                             If(CountRows(Adjunto_20.Attachments)=0,false,
                              Set(varAzureFileUsuarioNew,AzureBlobStorage.CreateFile("images",GUID() & Last(Adjunto_20.Attachments).Name,Last(Adjunto_20.Attachments).Value)));
                             
+                            Set(_varUserRel,
                             Patch('public.Medical_Center_Usuario',Defaults('public.Medical_Center_Usuario'),{
                              id:First(SortByColumns('public.Medical_Center_Usuario',"id",SortOrder.Descending)).id+1,   
                             Usuario:ComboBox4.Selected.DisplayName,
@@ -2486,16 +2488,24 @@
                             Activo: true,
                             NombreImage:varAzureFileUsuarioNew.Id,
                             url:"https://blobauroranuevo.blob.core.windows.net"&varAzureFileUsuarioNew.Path
-                            })
+                            }));
                             
                             
-                            ;Remove(colMiUsuario, LookUp(colMiUsuario,Mail=_selectedUser.Mail));Reset(TextInput9);
+                            Patch('public.medical_center_users_relacion', Defaults('public.medical_center_users_relacion'),{
+                             id:First(SortByColumns('public.medical_center_users_relacion',"id",SortOrder.Descending)).id+1,
+                             id_usuario: _varUserRel.id,
+                             correo: _varUserRel.Correo
+                            });
+                            
+                            Remove(colMiUsuario, LookUp(colMiUsuario,Mail=_selectedUser.Mail));
+                            Reset(TextInput9);
                             Reset(TextInput9_1);
                             Reset(dpEstadoCivil_DCA_10);
                             Reset(TextInput9_5);
                             Reset(Adjunto_11);
                             Reset(txtMeta);
                             Reset(fechaCuota);
+                            
                             If(And(LookUp('public.Medical_Center_Usuario',Correo=User().Email,Rol)="Administrador",LookUp('public.Medical_Center_VerificacionApp',correo=User().Email,fase)="Incompleto"),
                             
                             Patch('public.Medical_Center_VerificacionApp',LookUp('public.Medical_Center_VerificacionApp',correo=User().Email),
@@ -2507,8 +2517,9 @@
                             LookUp('public.Medical_Center_VerificacionApp',correo=User().Email,agregar_examenes)=true,
                             LookUp('public.Medical_Center_VerificacionApp',correo=User().Email,agregar_medicamento)=true,
                             LookUp('public.Medical_Center_VerificacionApp',correo=User().Email,agregar_tratamiento)=true,
-                            LookUp('public.Medical_Center_VerificacionApp',correo=User().Email,agregar_servicio)=true),Set(varViewPopUpVerificacionCompletado,true),false),
-                            false)
+                            LookUp('public.Medical_Center_VerificacionApp',correo=User().Email,agregar_servicio)=true),
+                            Set(varViewPopUpVerificacionCompletado,true),false),
+                            false);
                         PressedBorderColor: =If(Or(getUser.Modo_Nocturno=false ,IsBlank(getUser.Modo_Nocturno)),varcolor_ClaroElementoPrimario,varcolor_OscuroTextoPrimario)
                         PressedColor: =If(Or(getUser.Modo_Nocturno=false ,IsBlank(getUser.Modo_Nocturno)),varcolor_ClaroBackgroundBlanco,varcolor_OscuroTextoPrimario)
                         PressedFill: =If(Or(getUser.Modo_Nocturno=false ,IsBlank(getUser.Modo_Nocturno)),varcolor_ClaroElementoPrimario,varcolor_OscuroElementoPrimario)
@@ -2517,7 +2528,7 @@
                         Visible: =_varNewUsuario
                         Width: =360
                         X: =20
-                        Y: =710
+                        Y: =779
                         ZIndex: =11
 
                     Icon12_7 As icon.Redo:
@@ -2632,7 +2643,7 @@
                         Text: ="CMP"
                         Visible: =_varNewUsuario
                         X: =20
-                        Y: =514
+                        Y: =583
                         ZIndex: =20
 
                     txtCPP_1 As text:
@@ -2659,7 +2670,7 @@
                         Visible: =_varNewUsuario
                         Width: =170
                         X: =20
-                        Y: =550
+                        Y: =619
                         ZIndex: =21
 
                     Label13_52 As label:
@@ -2670,8 +2681,8 @@
                         PaddingLeft: =0
                         Text: ="RNE"
                         Visible: =_varNewUsuario
-                        X: =206
-                        Y: =514
+                        X: =207
+                        Y: =583
                         ZIndex: =22
 
                     txtRNE_2 As text:
@@ -2697,8 +2708,8 @@
                         Size: =12
                         Visible: =_varNewUsuario
                         Width: =170
-                        X: =206
-                        Y: =550
+                        X: =207
+                        Y: =619
                         ZIndex: =23
 
                     Label13_55 As label:
@@ -2710,7 +2721,7 @@
                         Text: ="Meta"
                         Visible: =_varNewUsuario
                         X: =20
-                        Y: =614
+                        Y: =683
                         ZIndex: =24
 
                     txtMeta_1 As text:
@@ -2739,7 +2750,7 @@
                         Visible: =_varNewUsuario
                         Width: =170
                         X: =20
-                        Y: =650
+                        Y: =719
                         ZIndex: =25
 
                     Label13_54 As label:
@@ -2750,8 +2761,8 @@
                         PaddingLeft: =0
                         Text: ="Fecha"
                         Visible: =_varNewUsuario
-                        X: =206
-                        Y: =614
+                        X: =207
+                        Y: =683
                         ZIndex: =26
 
                     txtRNE_3 As text:
@@ -2769,8 +2780,8 @@
                         RadiusTopRight: =8
                         Visible: =_varNewUsuario
                         Width: =170
-                        X: =206
-                        Y: =650
+                        X: =207
+                        Y: =719
                         ZIndex: =27
 
                     Label13_56 As label:
@@ -2782,8 +2793,8 @@
                         Text: =varSimboloMaestros
                         Visible: =_varNewUsuario
                         Width: =31
-                        X: =17
-                        Y: =649
+                        X: =20
+                        Y: =718
                         ZIndex: =28
 
                     fechaCuota_1 As datepicker:
@@ -2800,8 +2811,8 @@
                         Size: =12
                         Visible: =_varNewUsuario
                         Width: =160
-                        X: =211
-                        Y: =653
+                        X: =212
+                        Y: =722
                         ZIndex: =29
 
                     Icon5_9 As icon.Help:
@@ -2937,6 +2948,18 @@
                         Y: =249
                         ZIndex: =34
 
+                    Label13_51 As label:
+                        Color: =If(Or(getUser.Modo_Nocturno=false ,IsBlank(getUser.Modo_Nocturno)),varcolor_ClaroTextoPrimario,varcolor_OscuroTextoPrimario)
+                        Font: =Font.'Segoe UI'
+                        FontWeight: =FontWeight.Semibold
+                        Height: =28
+                        PaddingLeft: =0
+                        Text: ="Sedes"
+                        Visible: =_varNewUsuario
+                        X: =17
+                        Y: =500
+                        ZIndex: =35
+
                     Group46Firma As group:
                         Height: =5
                         Width: =5
@@ -3011,6 +3034,43 @@
                             X: =165
                             Y: =8
                             ZIndex: =19
+
+                    TextInput9_24 As text:
+                        BorderColor: =If(Or(getUser.Modo_Nocturno=false ,IsBlank(getUser.Modo_Nocturno)),varcolor_ClaroTextoPrimario,varcolor_OscuroTextoPrimario)
+                        Color: =If(Or(getUser.Modo_Nocturno=false ,IsBlank(getUser.Modo_Nocturno)),varcolor_ClaroTextoPrimario,varcolor_OscuroTextoPrimario)
+                        Default: =LookUp(colMiUsuario,Mail=_selectedUser.Mail,DisplayName)
+                        DisabledBorderColor: =RGBA(0, 0, 0, 1)
+                        DisabledFill: =RGBA(255, 255, 255, 1)
+                        DisplayMode: =DisplayMode.Disabled
+                        Fill: =If(Or(getUser.Modo_Nocturno=false ,IsBlank(getUser.Modo_Nocturno)),varcolor_ClaroBackgroundBlanco,varcolor_OscuroBackgroundNegro)
+                        Font: =Font.'Segoe UI'
+                        Height: =36
+                        RadiusBottomLeft: =8
+                        RadiusBottomRight: =8
+                        RadiusTopLeft: =8
+                        RadiusTopRight: =8
+                        Visible: =_varNewUsuario
+                        Width: =360
+                        X: =17
+                        Y: =536
+                        ZIndex: =36
+
+                    ComboBox4_SedesU As combobox:
+                        BorderStyle: =BorderStyle.None
+                        ChevronBackground: =RGBA(0, 0, 0, 0)
+                        ChevronFill: =RGBA(0, 0, 0, 1)
+                        DisplayFields: =["sede"]
+                        DisplayMode: =If(dpEstadoCivil_DCA_23.Selected.rol = "Doctor",DisplayMode.Disabled,DisplayMode.Edit)
+                        Height: =30
+                        InputTextPlaceholder: ="Seleccione una opción"
+                        IsSearchable: =false
+                        Items: ='public.medical_center_sedes'
+                        SearchFields: =["sede"]
+                        SearchItems: =[]
+                        Width: =350
+                        X: =22
+                        Y: =539
+                        ZIndex: =37
 
     GroupAddTipoRegistro As group:
         Height: =5
@@ -10461,7 +10521,7 @@
                 Reset(txtCPP_1);
                 Reset(txtRNE_2);
                 Reset(fechaCuota_1);
-                Reset(txtMeta_1);
+                Reset(txtMeta_1);Reset(ComboBox4_SedesU)
             PressedBorderColor: =If(Or(getUser.Modo_Nocturno=false ,IsBlank(getUser.Modo_Nocturno)),varcolor_ClaroElementoPrimario,varcolor_OscuroElementoPrimario)
             PressedColor: =If(Or(getUser.Modo_Nocturno=false ,IsBlank(getUser.Modo_Nocturno)),varcolor_ClaroElementoPrimario,varcolor_OscuroElementoPrimario)
             PressedFill: =If(Or(getUser.Modo_Nocturno=false ,IsBlank(getUser.Modo_Nocturno)),varcolor_ClaroBackgroundBlanco,varcolor_OscuroBackgroundNegro)
